--- a/app/src/Chat.css
+++ b/app/src/Chat.css
@@ -96,6 +96,7 @@
   max-width: 60%;
   word-wrap: break-word;
   transition: all 0.2s ease-in-out;
+  white-space: pre-wrap;
 
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.3);
@@ -132,10 +133,5 @@
 
 .chat-input > textarea {
   width: 100%;
-  height: 32px;
   transition: all 0.1s ease-in-out;
-}
-
-.chat-input > textarea:focus {
-  height: 60px;
 }
