--- a/app/src/Chat.css
+++ b/app/src/Chat.css
@@ -116,6 +116,16 @@
   margin-bottom: var(--spacing);
 }
 
+.automated {
+  display: inline;
+  content: "translated";
+  color: rgba(0, 0, 0, 0.3);
+  margin-left: var(--spacing);
+  background-color: rgba(0, 0, 0, 0.08);
+  padding: 3px 7px;
+  border-radius: var(--border-radius);
+}
+
 .chat-input {
   display: flex;
   align-items: center;
