--- a/app/src/Chat.css
+++ b/app/src/Chat.css
@@ -53,8 +53,26 @@
   width: calc(100% - var(--spacing) * 2);
   height: 100%;
   min-height: 122px;
-  overflow: hidden;
+  overflow: auto;
   padding: var(--spacing);
+}
+
+.chat.collapsed .messages {
+  overflow: hidden;
+}
+
+.messages::-webkit-scrollbar {
+  width: 6px;
+}
+
+.messages::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.15);
+  border-radius: 20px;
+}
+
+.messages::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 20px;
 }
 
 .message {
